# otemee

./: .env.example  .gitignore  README.md  electron-builder.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
docs/: COMPONENT_TEMPLATE.md  PAGE_TEMPLATE.md  REFACTORING.md  STATE_MANAGEMENT.md  TAILWIND_V4.md  VSCODE_SNIPPETS.md  VUE_QUERY_GUIDE.md  WINDOW_DRAG.md  autoscroll-implementation.md
electron/: main.js  preload.js
server/: chats.db  database.py  main.py  pyproject.toml
server/models/: __init__.py  chat.py  settings.py
server/routers/: chat.py  chats.py  models.py  settings.py
server/schemas/: chat.py  settings.py
server/services/: llm.py
src/: App.vue  main.ts
src/api/: chats.ts  models.ts  settings.ts
src/assets/: main.css  markdown-test.md
src/components/base/: BaseButton.vue  BaseContextMenu.vue  BaseInput.vue
src/components/chat/: ChatMessage.vue  ChatPrompt.vue  CodeBlock.vue  MessageList.vue  ModelPicker.vue  StreamingMarkdown.vue
src/components/settings/: AboutSettings.vue  ApiKeysSettings.vue  GeneralSettings.vue  SettingsModal.vue
src/components/sidebar/: AppSidebar.vue  ChatList.vue  ChatListItem.vue
src/composables/: useChat.ts  useMessageAutoscroll.ts  useModelSettings.ts  useStreamingState.ts
src/layouts/: default.vue
src/pages/: index.vue
src/pages/chat/: [id].vue
src/router/: index.ts
src/stores/: chats.ts  models.ts  settings.ts  sidebar.ts
src/types/: chat.ts  electron.d.ts
