[project]
name = "otemee-server"
version = "0.1.0"
description = "FastAPI backend for Otemee chat application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.0",
]

[tool.uv]
package = false
